H5 赛事列表 CSS 变量 联调

--- a/project/yazhou-h5/src/css/bet/accept_rules.scss
+++ b/project/yazhou-h5/src/css/bet/accept_rules.scss
@@ -19,7 +19,7 @@
     }
 
     p > span:not(.chu) {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       background-color: var(--q-gb-bd-c-13);
     }
     .chu {
