--- a/project/yazhou-h5/src/css/bet/bet_bar.scss
+++ b/project/yazhou-h5/src/css/bet/bet_bar.scss
@@ -13,7 +13,7 @@
       }
     }
     .account-p {
-      color:  var(--q-color-fs-color-15);
+      color:  var(--q-match-fs-color-15);
     }
     &::after {
       background:  var(--q-color-page-bg-color-20);
