--- a/project/yazhou-h5/src/css/bet/bet_mix_show.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_show.scss
@@ -18,7 +18,7 @@
     }
     .pankou-change {
       background-color: var(--q-color-com-bg-color-13);
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       border-radius: 2px;
       padding-left: 0.02rem;
       padding-right: 0.02rem;
@@ -34,7 +34,7 @@
     }
     .invalid-span,
     .invalid-span2 {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       background: var(--q-gb-bd-c-8);
     }
     .xia {
