--- a/project/yazhou-h5/src/css/bet/keyboard.scss
+++ b/project/yazhou-h5/src/css/bet/keyboard.scss
@@ -12,7 +12,7 @@
     .key-cell {
       flex: 1;
       text-align: center;
-      border: 1px solid  var(--q-color-border-color-52);
+      border: 1px solid  var(--q-gb-bd-c-32);
       background:  var(--q-color-page-bg-color-27);
     }
     .key-cell {
