--- a/project/yazhou-h5/src/css/pages/app.scss
+++ b/project/yazhou-h5/src/css/pages/app.scss
@@ -1045,7 +1045,7 @@ i {
     left: 0;
     bottom: 0;
     height: 1px;
-    border-bottom: 1px solid var(--q-color-border-color-5);
+    border-bottom: 1px solid var(--q-gb-bd-c-3);
     width: 100%;
     transform: scaleY(0.5);
     transform-origin: 0 0;
