--- a/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
@@ -4,10 +4,10 @@
 [class*=theme0] {
   /*************** 马类编号开始 *************** -S*/
   .virtual-num {
-    color:var(--q-color-com-fs-color-8);
+    color:var(--q-gb-bd-c-2);
   }
   .virtual-on {
-    color:var(--q-color-com-fs-color-8);
+    color:var(--q-gb-bd-c-2);
   }
 
   /*************** 编号结束 *************** -E*/
