--- a/project/yazhou-h5/src/pages/match-list/styles/odd-list-wrap.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/odd-list-wrap.scss
@@ -32,7 +32,7 @@
       }
       &:nth-child(2){
         >span{
-          color: var(--q-color-fs-color-135);
+          color: var(--q-match-fs-color-135);
         }
       }
     }
