--- a/project/yazhou-h5/src/css/bet/bet_mix_show2.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_show2.scss
@@ -9,7 +9,7 @@
       background-color:  var(--q-color-page-bg-color-22);
     }
     .timer-down {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       background: var(--q-gb-bd-c-13);
     }
     .locked-shadow {
@@ -23,7 +23,7 @@
     }
     .invalid-span,
     .invalid-span2 {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       background: var(--q-gb-bd-c-8);
     }
     .line {
