--- a/project/yazhou-h5/src/css/pages/first_page.scss
+++ b/project/yazhou-h5/src/css/pages/first_page.scss
@@ -2,18 +2,18 @@
   .home-page {
     background: var(--q-color-page-bg-color-1);
     &.white-background {
-      background:var(--q-color-page-bg-color-105);
+      background:var(--q-match-page-bg-color-105);
     }
     &.white-font {
       li {
         &.is-active {
-          color:var(--q-color-com-fs-color-8);
+          color:var(--q-gb-bd-c-2);
           .tabs-label {
-            color:var(--q-color-com-fs-color-8);
+            color:var(--q-gb-bd-c-2);
           }
         }
         .tabs-label {
-          color:var(--q-color-com-fs-color-8);
+          color:var(--q-gb-bd-c-2);
         }
       }
     }
@@ -52,7 +52,7 @@
     }
     .icon-lang-dark {
       ul {
-        background: var(--q-color-page-bg-color-10);
+        background: var(--q-match-page-bg-color-10);
         color: var(--q-color-fs-color-45);
         &::before {
           border-bottom: 0.08rem solid var(--q-color-com-border-color-3);
