--- a/project/yazhou-h5/src/css/pages/main-layout.scss
+++ b/project/yazhou-h5/src/css/pages/main-layout.scss
@@ -10,7 +10,7 @@
     .folat-menu::before {
       border: 1px solid  var(--q-color-com-border-color-13);
       background-color: var(--q-color-com-bg-color-13);
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
     }
     /* ************** 悬浮按钮 ************** -E */
     /* **********注单记录********************* *-S*/
@@ -63,7 +63,7 @@
       position: absolute;
       left: 0;
       top: 0;
-      border: 1px solid var(--q-color-border-color-5) !important;
+      border: 1px solid var(--q-gb-bd-c-3) !important;
        // border: 1px solid red !important; 调试
       border-radius: 0.16rem;
       width: 200%;
