--- a/project/yazhou-h5/src/css/pages/match-o-container.scss
+++ b/project/yazhou-h5/src/css/pages/match-o-container.scss
@@ -16,7 +16,7 @@
         border-bottom: 0.01rem solid var(--q-color-border-color-1);
       }
       .v-football-data {
-        border-color: var(--q-color-border-color-5);
+        border-color: var(--q-gb-bd-c-3);
         background-color: var(--q-color-page-bg-color-2);
       }
       .team-title {
