--- a/project/yazhou-h5/src/css/pages/menu.scss
+++ b/project/yazhou-h5/src/css/pages/menu.scss
@@ -84,8 +84,8 @@
         background-color: var(--q-color-page-bg-color-2);
 
         .tab-item {
-            color: var(--q-color-fs-color-13);
-            background-color: var(--q-color-page-bg-color-10);
+            color: var(--q-match-fs-color-13);
+            background-color: var(--q-match-page-bg-color-10);
             border: 1px solid var(--q-color-border-color-29);
 
             &.active {
@@ -123,7 +123,7 @@
 
                     // font-weight: 700;
                     &.esport {
-                        color: var(--q-color-com-fs-color-8);
+                        color: var(--q-gb-bd-c-2);
                     }
                 }
             }
@@ -134,7 +134,7 @@
                 color: var(--q-color-fs-color-129);
 
                 &.esport {
-                    color: var(--q-color-fs-color-133);
+                    color: var(--q-match-fs-color-133);
                 }
             }
 
@@ -184,7 +184,7 @@
                 }
 
                 &.m-count-match {
-                    color: var(--q-color-fs-color-131);
+                    color: var(--q-match-fs-color-131);
                 }
             }
 
@@ -197,11 +197,11 @@
 
                 &>div {
                     &:first-child {
-                        color: var(--q-color-com-fs-color-8);
+                        color: var(--q-gb-bd-c-2);
                     }
 
                     &:last-child {
-                        color: var(--q-color-com-fs-color-8);
+                        color: var(--q-gb-bd-c-2);
                     }
                 }
             }
