--- a/project/yazhou-h5/src/pages/details/styles/details-theme/temp.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/temp.scss
@@ -21,7 +21,7 @@
     .text-color {
       color: var(--q-color-fs-color-38) !important;
       .mat-info, .mat-info2 {
-        background-color: var(--q-color-page-bg-color-104);
+        background-color: var(--q-match-page-bg-color-104);
         border: .01rem solid var(--q-color-border-color-42);
         color: var(--q-color-fs-color-38);
       }
@@ -66,10 +66,10 @@
       background:var(--q-color-page-bg-color-2);
     }
     .bor-btm {
-      border-bottom: 1px solid var(--q-color-border-color-56);
+      border-bottom: 1px solid var(--q-gb-bd-c-36);
     }
     .remark {
-      color:  var(--q-color-fs-color-13);
+      color:  var(--q-match-fs-color-13);
     }
     .active {
       background: var(--q-color-com-bg-color-3) !important;
@@ -84,7 +84,7 @@
       color:var(--q-gb-t-c-13);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -124,16 +124,16 @@
     }
     .white_text {
       .led {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
 
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
     }
     .led {
-      color: var(--q-color-fs-color-13);
+      color: var(--q-match-fs-color-13);
     }
     .win {
       .led {
@@ -168,34 +168,34 @@
     .play-box {
       background:var(--q-color-page-bg-color-2);
       .ellipsis {
-        color:var(--q-color-fs-color-13);
+        color:var(--q-match-fs-color-13);
       }
     }
     .active_play {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
       background-color: var(--q-gb-bd-c-13) !important;
       .size-color {
-        color:var(--q-color-com-fs-color-8);
+        color:var(--q-gb-bd-c-2);
       }
       .ellipsis {
-        color:var(--q-color-com-fs-color-8);
+        color:var(--q-gb-bd-c-2);
       }
     }
   }
   .temp51 {
     .row {
       &:not(:first-child) {
-        border-top: 1px solid var(--q-color-border-color-56);
+        border-top: 1px solid var(--q-gb-bd-c-36);
       }
       .col:first-child {
-        border-right: 1px solid var(--q-color-border-color-56);
+        border-right: 1px solid var(--q-gb-bd-c-36);
       }
     }
   }
   .result-details {
     .temp2 {
       .row:not(:first-child) {
-        border-top: 1px solid var(--q-color-border-color-56);
+        border-top: 1px solid var(--q-gb-bd-c-36);
       }
     }
   }
@@ -207,7 +207,7 @@
       color:  var(--q-color-fs-color-26);
     }
     .bor-style {
-      border-bottom: 1px solid var(--q-color-border-color-56);
+      border-bottom: 1px solid var(--q-gb-bd-c-36);
     }
     .play-box-style {
       background:var(--q-color-page-bg-color-2);
@@ -222,7 +222,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
     }
     // .details_color {
     //   background:var(--q-color-page-bg-color-2);
@@ -251,8 +251,8 @@
     .item-wrap {
       > .item2 {
         margin-right: 0;
-        border-right: 1px solid var(--q-color-border-color-56);
-        border-top: 1px solid var(--q-color-border-color-56);
+        border-right: 1px solid var(--q-gb-bd-c-36);
+        border-top: 1px solid var(--q-gb-bd-c-36);
         &:first-child {
           border-top: 0;
         }
@@ -279,7 +279,7 @@
       }
     }
     .bor-style {
-      border-bottom: 1px solid var(--q-color-border-color-56);
+      border-bottom: 1px solid var(--q-gb-bd-c-36);
     }
     .active {
       background: var(--q-color-com-bg-color-3);
@@ -288,7 +288,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -304,7 +304,7 @@
       }
     }
     .fam {
-      color: var(--q-color-fs-color-13);
+      color: var(--q-match-fs-color-13);
     }
     .win  .odds-new2 {
       color: var(--q-color-com-fs-color-44) !important;
@@ -322,7 +322,7 @@
   /*************** temp5开始 *************** -S*/
   .temp5 {
     .head {
-      color: var(--q-color-fs-color-13);
+      color: var(--q-match-fs-color-13);
     }
     .play-box-style {
       background: var(--q-color-page-bg-color-8);
@@ -337,8 +337,8 @@
       color: var(--q-color-com-fs-color-44) !important;
     }
     .active-play {
-      color:var(--q-color-com-fs-color-8) ;
-      background-color: var(--q-color-page-bg-color-10) !important;
+      color:var(--q-gb-bd-c-2) ;
+      background-color: var(--q-match-page-bg-color-10) !important;
 
     }
   }
@@ -346,10 +346,10 @@
     .temp5 {
       .content-wrapper {
         .row:not(.head) {
-          background: var(--q-color-page-bg-color-107);
+          background: var(--q-match-page-bg-color-107);
         }
         .play-box-style {
-           background-color:var(--q-color-page-bg-color-104);
+           background-color:var(--q-match-page-bg-color-104);
            color: var(--q-gb-t-c-13);
         }
       }
@@ -360,13 +360,13 @@
   /*************** temp6开始 *************** -S*/
   .temp6 {
     .title-style {
-      color: var(--q-color-fs-color-13);
+      color: var(--q-match-fs-color-13);
     }
     .play-box-style {
       background:var(--q-color-page-bg-color-2);
     }
     .bor-style {
-      border-bottom: 1px solid var(--q-color-border-color-56) !important;
+      border-bottom: 1px solid var(--q-gb-bd-c-36) !important;
     }
     .remark {
       color: var(--q-color-fs-color-26)
@@ -378,7 +378,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -403,7 +403,7 @@
       color:var(--q-gb-t-c-13);
     }
     .item-col:first-child {
-      border-right: 1px solid var(--q-color-border-color-56);
+      border-right: 1px solid var(--q-gb-bd-c-36);
     }
   }
   .tournament-play-outer {
@@ -435,7 +435,7 @@
       background:var(--q-color-page-bg-color-2);
     }
     .bor-style {
-      border-bottom: 1px solid var(--q-color-border-color-56);
+      border-bottom: 1px solid var(--q-gb-bd-c-36);
     }
     .remark {
       color: var(--q-color-fs-color-26);
@@ -447,7 +447,7 @@
       background: var(--q-color-com-bg-color-26);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
     }
     .details_color {
       background:var(--q-color-page-bg-color-2);
@@ -463,7 +463,7 @@
       }
     }
     .fam {
-      color: var(--q-color-fs-color-13);
+      color: var(--q-match-fs-color-13);
     }
     .win  .odds-new2 {
       color: var(--q-color-com-fs-color-44) !important;
@@ -483,9 +483,9 @@
     /*************** 每项热门开始 *************** -S*/
     .special {
       // background:var(--q-color-page-bg-color-2);
-      background: var(--q-color-page-bg-color-104);
+      background: var(--q-match-page-bg-color-104);
       &::after {
-        border-color: var(--q-color-border-color-5) !important;
+        border-color: var(--q-gb-bd-c-3) !important;
       }
     }
 
@@ -504,7 +504,7 @@
     /*************** 每项odds结束 *************** -E*/
     .team-odds2 {
       background-color: var(--q-gb-bd-c-9);
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
     }
   }
 
@@ -514,8 +514,8 @@
   .temp9 {
     .champion-item {
       background: var(--q-color-page-bg-color-119);
-      border-top: 1px solid  var(--q-color-border-color-56);
-      border-right: 1px solid  var(--q-color-border-color-56);
+      border-top: 1px solid  var(--q-gb-bd-c-36);
+      border-right: 1px solid  var(--q-gb-bd-c-36);
       &:nth-child(2n) {
         border-right: 0px solid  var(--q-color-border-color-38);
       }
@@ -530,11 +530,11 @@
       background-color: var(--q-gb-bd-c-9);
       .temp9-name,
       .temp9-ov {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
     }
     .virtual-bet-wrapper {
-      background:var(--q-color-page-bg-color-104);
+      background:var(--q-match-page-bg-color-104);
     }
   }
   /*************** temp9结束 *************** -E*/
@@ -544,7 +544,7 @@
     background: var(--q-gb-bd-c-9);
     .virtual-bet-wrapper {
       // background:var(--q-color-page-bg-color-2);
-      background:var(--q-color-page-bg-color-104);
+      background:var(--q-match-page-bg-color-104);
       .item-height {
         background: var(--q-color-page-bg-color-9);
       }
@@ -563,12 +563,12 @@
     }
     /*************** 赔率结束 *************** -E*/
     .item-height {
-      border-right: 1px solid  var(--q-color-border-color-56);
+      border-right: 1px solid  var(--q-gb-bd-c-36);
     }
     .blue-color {
       background: var(--q-gb-bd-c-9);
       .odds-style {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
       .virtual-num2,
       .virtual-num4 {
@@ -583,7 +583,7 @@
   .temp11 {
     .virtual-bet-wrapper {
       // background:var(--q-color-page-bg-color-2);
-      background:var(--q-color-page-bg-color-104);
+      background:var(--q-match-page-bg-color-104);
       .item-style2 {
         background: var(--q-color-page-bg-color-9);
       }
@@ -604,12 +604,12 @@
 
     /*************** 赔率结束 *************** -E*/
     .item-style2 {
-      border-right: 1px solid  var(--q-color-border-color-56);
+      border-right: 1px solid  var(--q-gb-bd-c-36);
     }
     .blue-color {
       background: var(--q-gb-bd-c-9);
       .odds-style {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
     }
   }
@@ -618,7 +618,7 @@
   /*************** temp12开始 *************** -S*/
   .temp12 {
     .bor-style {
-      border-top: 1px solid var(--q-color-border-color-56);
+      border-top: 1px solid var(--q-gb-bd-c-36);
       // border-top: 1px solid var(--q-color-border-color-46);
     }
     .bgm-color {
@@ -639,7 +639,7 @@
     .bet-click {
       background-color: var(--q-gb-bd-c-9) !important;
       .on-color {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
     }
     .win  .odds-new2 {
@@ -693,14 +693,14 @@
       background:var(--q-color-page-bg-color-2);
     }
     .white_text {
-      color:var(--q-color-com-fs-color-8) !important;
+      color:var(--q-gb-bd-c-2) !important;
       .ver-ali-top {
-        color:var(--q-color-com-fs-color-8) !important;
+        color:var(--q-gb-bd-c-2) !important;
       }
     }
     .play-name {
-      background:var(--q-color-page-bg-color-104);
-      color: var(--q-color-fs-color-13) ;
+      background:var(--q-match-page-bg-color-104);
+      color: var(--q-match-fs-color-13) ;
     }
     .ver-ali-top {
       color: var(--q-color-com-fs-color-11);
@@ -718,7 +718,7 @@
       color:var(--q-gb-t-c-13);
     }
     .size-color-wit {
-      color:var(--q-color-com-fs-color-8);
+      color:var(--q-gb-bd-c-2);
     }
     .size-color-imp {
       color:var(--q-gb-t-c-13) !important;
@@ -731,12 +731,12 @@
   /*************** temp14开始 *************** -S*/
   .temp14, .temp16 {
     .content:not(:last-child) {
-      // border-bottom: 1px solid var(--q-color-border-color-56);
+      // border-bottom: 1px solid var(--q-gb-bd-c-36);
       padding-bottom: 0.09rem;
       margin-bottom: 0.2rem;
     }
     .tittle {
-      color: var(--q-color-fs-color-13) ;
+      color: var(--q-match-fs-color-13) ;
     }
     .play-box {
       background:var(--q-color-page-bg-color-2);
@@ -745,11 +745,11 @@
       color: var(--q-color-fs-color-50);
     }
     .active {
-      background: var(--q-color-page-bg-color-10) !important;
+      background: var(--q-match-page-bg-color-10) !important;
       .remark {
-        color:var(--q-color-com-fs-color-8);
+        color:var(--q-gb-bd-c-2);
         span {
-          color:var(--q-color-com-fs-color-8);
+          color:var(--q-gb-bd-c-2);
         }
       }
     }
@@ -757,13 +757,13 @@
   .tournament-play-outer {
     .temp14, .temp16 {
       .row-bet-wrapper {
-        background-color: var(--q-color-page-bg-color-104);
+        background-color: var(--q-match-page-bg-color-104);
         .col {
           // .bet-box-bg:not(:first-child) {
-          //   border-top: 1px solid var(--q-color-border-color-56);
+          //   border-top: 1px solid var(--q-gb-bd-c-36);
           // }
           .play-box{
-            border-bottom: 1px solid var(--q-color-border-color-56);
+            border-bottom: 1px solid var(--q-gb-bd-c-36);
           }
         }
       }
@@ -781,21 +781,21 @@
     .play-box {
       background:var(--q-color-page-bg-color-2);
       // 修复：42811 【日常】【生产】【H5】【兼容】小米8赛事详情界面准确进球数的分隔线过粗，与其他分割线不一致，建议优化
-      border-bottom: 1px solid var(--q-color-border-color-56);
+      border-bottom: 1px solid var(--q-gb-bd-c-36);
     }
     .active-play {
-      color:var(--q-color-com-fs-color-8);
-      background-color: var(--q-color-page-bg-color-10) !important;
+      color:var(--q-gb-bd-c-2);
+      background-color: var(--q-match-page-bg-color-10) !important;
       & > div {
-        color:var(--q-color-com-fs-color-8);
+        color:var(--q-gb-bd-c-2);
       }
     }
     .play-box.every5.border-top {
       // 修复：42811 【日常】【生产】【H5】【兼容】小米8赛事详情界面准确进球数的分隔线过粗，与其他分割线不一致，建议优化
-      // border-top: 1px solid var(--q-color-border-color-56);
+      // border-top: 1px solid var(--q-gb-bd-c-36);
       & ~ i.border-top {
         // 修复：42811 【日常】【生产】【H5】【兼容】小米8赛事详情界面准确进球数的分隔线过粗，与其他分割线不一致，建议优化
-        // border-top: 1px solid var(--q-color-border-color-56);
+        // border-top: 1px solid var(--q-gb-bd-c-36);
       }
     }
   }
@@ -814,7 +814,7 @@
       }
       .bet-box-bg {
         //  background-color:var(--q-color-page-bg-color-2);
-        background-color: var(--q-color-page-bg-color-104);
+        background-color: var(--q-match-page-bg-color-104);
       }
       &.temp4,
       &.temp5,
@@ -823,17 +823,17 @@
       &.temp16
       &.temp15 {
         &::after {
-          border-color: var(--q-color-border-color-5) !important;
+          border-color: var(--q-gb-bd-c-3) !important;
         }
       }
       .item-wrap,
       .rad-style {
         &::after {
-          border-color: var(--q-color-border-color-5) !important;
+          border-color: var(--q-gb-bd-c-3) !important;
         }
       }
       &:not(.temp5) > .row:not(.title-style)::after {
-        border-color: var(--q-color-border-color-5) !important;
+        border-color: var(--q-gb-bd-c-3) !important;
       }
       .play-name,
       .slide-wrap,
@@ -841,7 +841,7 @@
       .details_color,
       .play-box {
         //  background-color:var(--q-color-page-bg-color-2);
-        background:var(--q-color-page-bg-color-104);
+        background:var(--q-match-page-bg-color-104);
         // border-radius: 4px;
       }
     }
