--- a/project/yazhou-h5/src/pages/home/first-page/index.scss
+++ b/project/yazhou-h5/src/pages/home/first-page/index.scss
@@ -124,7 +124,7 @@
         }
 
         .both-item {
-          color: var(--q-color-com-fs-color-8);
+          color: var(--q-gb-bd-c-2);
           font-size: 0.14rem;
           /*line-height: 1;*/
           width: 1.1rem;
@@ -147,7 +147,7 @@
         .vs-wrap {
           .score-wrap {
             font-size: 0.36rem;
-            color: var(--q-color-com-fs-color-8);
+            color: var(--q-gb-bd-c-2);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -164,7 +164,7 @@
             .crossing {
               flex: 0 0 0.1rem;
               height: 0.04rem;
-              background: var(--q-color-com-fs-color-8);
+              background: var(--q-gb-bd-c-2);
               margin: 0 0.06rem;
             }
           }
@@ -173,7 +173,7 @@
         .both-timer {
           flex: 1;
           height: 100%;
-          color: var(--q-color-com-fs-color-8);
+          color: var(--q-gb-bd-c-2);
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -189,7 +189,7 @@
             align-items: center;
             line-height: 1;
             font-size: 0.12rem;
-            color: var(--q-color-com-fs-color-8);
+            color: var(--q-gb-bd-c-2);
 
             .title-space-1 {
               margin: 0;
@@ -199,12 +199,12 @@
             .special {
               font-size: 0.12rem;
               line-height: 0.16rem;
-              color: var(--q-color-com-fs-color-8);
+              color: var(--q-gb-bd-c-2);
             }
           }
 
           ::v-deep.counting-down-start {
-            color: var(--q-color-com-fs-color-8);
+            color: var(--q-gb-bd-c-2);
           }
         }
       }
