--- a/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container-champion.scss
@@ -199,7 +199,7 @@
 
   .score-inner-span {
     width: 3.3rem;
-    color: var(--q-color-fs-color-153);
+    color: var(--q-match-fs-color-153);
   }
 
   .icon_match_cup,
