--- a/project/yazhou-h5/src/pages/match-list/styles/match-container-result.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container-result.scss
@@ -706,7 +706,7 @@
           .score-punish {
             width: 0.12rem;
             height: 0.14rem;
-            color: var(--q-color-com-fs-color-8);
+            color: var(--q-gb-bd-c-2);
             flex-shrink: 0;
             background: var(--q-color-com-bg-color-43);
             display: flex;
