--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -320,8 +320,8 @@
     justify-content: space-between;
     align-items: center;
     height: 0.4rem;
-    background: var(--q-color-page-bg-color-96);
-    border-color: var(--q-color-border-color-5);
+    background: var(--q-match-page-bg-color-96);
+    border-color: var(--q-gb-bd-c-3);
 
     &.show-sport {
       border-radius: 0.12rem 0.12rem 0 0;
@@ -763,7 +763,7 @@
         .score-punish {
           width: 0.12rem;
           height: 0.14rem;
-          color: var(--q-color-com-fs-color-8);
+          color: var(--q-gb-bd-c-2);
           flex-shrink: 0;
           background: var(--q-color-com-bg-color-43);
           display: flex;
