--- a/project/yazhou-h5/src/css/pages/first_page.scss
+++ b/project/yazhou-h5/src/css/pages/first_page.scss
@@ -1,6 +1,6 @@
 [class*=theme0] {
   .home-page {
-    background: var(--q-color-page-bg-color-1);
+    background: var(--q-gb-bd-c-17);
     &.white-background {
       background:var(--q-match-page-bg-color-105);
     }
