--- a/project/yazhou-h5/src/css/bet/bet_mix_box.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_box.scss
@@ -67,7 +67,7 @@
       opacity: 0.5;
     }
     .set-opacity {
-      background: var(--q-gb-bd-c-9);
+      background: var(--q-gb-bg-c-17);
 
     }
     .bet-box {
