--- a/project/yazhou-h5/src/css/bet/bet_mix_show.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_show.scss
@@ -97,7 +97,7 @@
             color: var(--q-gb-t-c-4);
           }
           .reduce,.add{
-            background: var(--q-gb-bd-c-9);
+            background: var(--q-gb-bg-c-17);
           }
           .reduce{
             border-right: 0.5px solid  var(--q-color-border-color-17);
