--- a/project/yazhou-h5/src/css/pages/match-container-champion.scss
+++ b/project/yazhou-h5/src/css/pages/match-container-champion.scss
@@ -18,7 +18,7 @@
       }
     }
     .hps-wrap {
-      background:var(--q-color-page-bg-color-95);
+      background:var(--q-gb-bg-c-15);
       .match-title {
         &:before {
           background:var(--q-gb-bd-c-13);
