--- a/project/yazhou-h5/src/css/pages/skeleton.scss
+++ b/project/yazhou-h5/src/css/pages/skeleton.scss
@@ -1,13 +1,13 @@
 [class*=theme0] {
   .skeleton-wrap {
     &.record {
-      background: var(--q-gb-bd-c-9);
+      background: var(--q-gb-bg-c-17);
     }
     &.match_result {
-      background: var(--q-gb-bd-c-9);
+      background: var(--q-gb-bg-c-17);
     }
     &.wrap {
-      background: var(--q-gb-bd-c-9);
+      background: var(--q-gb-bg-c-17);
     }
     .center {
       background:var(--q-color-page-bg-color-2);
@@ -19,7 +19,7 @@
     }
   }
   .list {
-    background: var(--q-gb-bd-c-9);
+    background: var(--q-gb-bg-c-17);
   }
   .tab {
     background:var(--q-color-page-bg-color-2);
