--- a/project/yazhou-h5/src/pages/match-list/styles/match-list.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-list.scss
@@ -32,7 +32,7 @@
       height: 0px;
       border-left: 0.095rem solid transparent;
       border-right: 0.095rem solid transparent;
-      border-bottom: 0.095rem solid var(--q-color-page-bg-color-95);
+      border-bottom: 0.095rem solid var(--q-gb-bg-c-15);
       position: absolute;
       top: -0.09rem;
       left: 0.115rem;
@@ -58,7 +58,7 @@
       height: 0px;
       border-left: 0.095rem solid transparent;
       border-right: 0.095rem solid transparent;
-      border-top: 0.095rem solid var(--q-color-page-bg-color-95);
+      border-top: 0.095rem solid var(--q-gb-bg-c-15);
       position: absolute;
       bottom: -0.09rem;
       left: 0.115rem;
@@ -70,7 +70,7 @@
     min-width: 2.82rem;
     max-width: 94vw;
     height: auto;
-    background-color: var(--q-color-page-bg-color-95);
+    background-color: var(--q-gb-bg-c-15);
     border: 0.01rem solid  var(--q-color-border-color-42);
     border-radius: 0.04rem;
     padding: 0.15rem 0.18rem;
