--- a/project/yazhou-h5/src/pages/details/styles/details-theme/details.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/details.scss
@@ -20,7 +20,7 @@
       background: var(--q-color-page-bg-color-9);
     }
     .details-f {
-      background: var(--q-gb-bd-c-9);
+      background: var(--q-gb-bg-c-17);
     }
   }
   .details {
