--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -224,7 +224,7 @@
           width: 100%;
           object-fit: cover;
           height: 0.58rem;
-          background-color: var(--q-gb-bd-c-9);
+          background-color: var(--q-gb-bg-c-17);
         }
 
         >span {
