--- a/project/yazhou-pc/src/components/site-header/site-header.scss
+++ b/project/yazhou-pc/src/components/site-header/site-header.scss
@@ -139,7 +139,8 @@
 
             &.normal,
             &.mini-normal {
-                width: $layout_menu_width;
+                // width: $layout_menu_width;
+                width: 220px;
                 margin-right: 13px;
             }
             .search-wrap {
@@ -158,7 +159,8 @@
                 }
 
                 &.mini {
-                    width: $layout_menu_width_mini;
+                    // width: $layout_menu_width_mini;
+                    width: 50px;
                     margin-right: 23px;
 
                     .search-icon {
