H5 列表联调、修改

--- a/project/yazhou-h5/src/css/pages/match-main.scss
+++ b/project/yazhou-h5/src/css/pages/match-main.scss
@@ -504,9 +504,9 @@
         background-color: transparent;
       }
       .odd-title {
-        color:  var(--q-match-fs-color-62) !important;
+        color:  var(--q-gb-t-c-17) !important;
         span {
-          color:  var(--q-match-fs-color-62) !important;
+          color:  var(--q-gb-t-c-17) !important;
         }
       }
       .odd-value {
