详情赛果页面

--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
@@ -528,11 +528,11 @@
     }
   }
   
-  @include keyframes(seamless-scrolling) {
-    0% {
-      transform: translateX(0px);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
+  // @include keyframes(seamless-scrolling) {
+  //   0% {
+  //     transform: translateX(0px);
+  //   }
+  //   100% {
+  //     transform: translateX(-50%);
+  //   }
+  // }
